[gd_scene load_steps=3 format=3 uid="uid://cswtwx6lp5gbm"]

[ext_resource type="Script" uid="uid://cqxcw5v2jgf8m" path="res://Menus/game_over.gd" id="1_ntcrg"]
[ext_resource type="AudioStream" uid="uid://dnurj6027ltr0" path="res://Assets/sounds/boo.wav" id="2_i0iaq"]

[node name="game_over" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ntcrg")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.796875, 0, 0, 1)
theme_override_font_sizes/font_size = 56
text = "YOU DIED"

[node name="Restart_btn" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Restart
"

[node name="Quit_btn" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Quit
"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_i0iaq")

[connection signal="pressed" from="VBoxContainer/HBoxContainer/VBoxContainer/Restart_btn" to="." method="_on_restart_btn_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/VBoxContainer/Quit_btn" to="." method="_on_quit_btn_pressed"]
